Added the ability to respond to messages, added new functionality and fixed bugs